<?xml version="1.0"?>
<package format="2">
    <name>ubi_panda_custom_controllers</name> <!-- This is a meta package! -->
    <version>0.1.0</version>
    <description>Custom controllers for the Franka Emika Panda robot.</description>

    <license>BSD</license>

    <url type="bugtracker">https://github.com/DavidPL1/panda_custom_controllers/issues</url>
    <url type="repository">https://github.com/DavidPL1/panda_custom_controllers</url>

    <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
    <author>David P. Leins</author>

    <buildtool_depend>catkin</buildtool_depend>


    <export>
        <metapackage/>
    </export>
</package>